<resources>
    <string name="app_name">eTutor</string>
    <string name="a1">image</string>
    <string name="a2">Welcome! Please Login or Register To Continue</string>
    <string name="a3">Login</string>
    <string name="a4">Log in As a Student/Guardian</string>
    <string name="a6">Register As a Student</string>
    <string name="a5">Register As a Tutor</string>
    <string name="a7">Enter Email</string>
    <string name="a8">Enter Password</string>
    <string name="a9">Forgot Password</string>
    <string name="a10">Login</string>
    <string name="a11">Full Name</string>
    <string name="a12">Phone No</string>
    <string name="a15">Email</string>
    <string name="a16">Male</string>
    <string name="a17">Female</string>
    <string name="a13">Enter Permanent Address</string>
    <string name="a14">Address</string>
    <string name="b1">Basic Info:</string>
    <string name="b2">Profession: </string>
    <string name="b3">Educational Qualification: </string>
    <string name="b4">Job Status</string>
    <string name="b5">Identity Verification: </string>
    <string name="b6">upload NID Card Photo</string>
    <string name="b7">Upload Another</string>
    <string name="b8">Security Info:</string>
    <string name="b9">Confirm Password</string>
    <string name="b10">Register</string>
    <string name="b11">Password</string>
    <string name="b12">Teacher Registration</string>
    <string name="b13">Student Registration</string>
    <string name="b14">Personal Info:</string>
    <string name="b15">Teacher Login</string>
    <string name="b16">Student Login</string>
    <string name="b17">Enter Your Address</string>
    <string name="c1">Home</string>
    <string name="c2">Create Post</string>
    <string name="c3">Account</string>
    <string name="c4">My Posts</string>
    <string name="c5">YES</string>
    <string name="c6">NO</string>
    <string name="title_activity_maps">Map</string>
    <string name="c7">What are you looking for?</string>
    <string name="c8">Select Category: </string>
    <string name="c9">Preferred Subjects: </string>
    <string name="c10">Preferred Day/Week: </string>
    <string name="c11">Preferred Area: </string>
    <string name="c12">Detailed Address</string>
    <string name="c13">Location From Google Map: </string>
    <string name="c14">Create Post</string>
    <string name="c15">Choose Photo</string>

    <string name="c16">Student Profile</string>
    <string name="c17">Teacher Profile</string>

    <string name="c18">Basic Info: </string>
    <string name="c19">Educational Info: </string>
    <string name="d1">ID Card: </string>
    <string name="d2">Security Status: </string>
    <string name="d3">Edit Profile</string>
    <string name="d4">My Profile</string>
    <string name="d5">Reviews</string>
    <string name="d6">Ratings &amp; Reviews: </string>
    <string name="d7">Loading……</string>
    <string name="d8">Login</string>
    <string name="d9">Resend Mail</string>
    <string name="d10">Hide</string>
    <string name="d11">Send Verification Mail</string>
    <string name="d12">A Verification Mail Will be sent To your Email. Please Enter Your Email Below.</string>
    <string name="d13">Upload Photo of NID/Student ID Card:</string>
    <string name="d14">Select Gender: </string>
    <string name="d15">My Reviews</string>
    <string name="d17">Privacy</string>
    <string name="d18">Update Password</string>
    <string name="d19">Enter Current Password</string>
    <string name="d20">Enter New Password</string>
    <string name="d21">Update</string>
    <string name="d22">Save</string>
    <string name="e1">Cancel</string>
    <string name="e2">Gender: </string>
    <string name="e3">Select Division: </string>
    <string name="e4">Select District: </string>
    <string name="e5">Update Profile Picture</string>
    <string name="e6">Preferred Salary Range: </string>
    <string name="e7">Number of Students: </string>
    <string name="e8">Change Location</string>
    <string name="e9">Select Class/Year: </string>
    <string name="e10">Select Budget Range: </string>
    <string name="e11">Select Your Address: </string>
    <string name="e12">Clear All</string>
    <string name="e13">Get Current Location</string>
    <string name="e14">Search Provided Address</string>
    <string name="e15">New Post</string>
    <string name="e16">Delete Post</string>
    <string name="e17">Back</string>
    <string name="f1">Details</string>
    <string name="f2">No Post Available!</string>
    <string name="f3">Delete</string>
    <string name="f4">Dismiss</string>
    <string name="f5">Post Details:</string>

    <string name="f6">Teacher Profile: </string>
    <string name="f7">Student Profile:</string>

    <string name="f8">Contact Info: </string>
    <string name="f9">Respond</string>
    <string name="f10">Go Back</string>
    <string name="f11">See Details</string>
    <string name="f12">No Post Found!</string>
    <string name="f13">Discard</string>
    <string name="f14">Apply</string>
    <string name="f15">Select Subject: </string>
    <string name="f16">Select Salary Range: </string>
    <string name="f17">Select Location: </string>
    <string name="g1">Select Division:</string>
    <string name="g2">Select District:</string>
    <string name="g3">Enter Your Review</string>
    <string name="g4">Submit</string>
    <string name="g5">Cancel</string>
    <string name="g6">Enter Message....</string>
    <string name="g7">View Profile</string>
    <string name="g8">No Message Found!</string>
    <string name="g9">My Name</string>
    <string name="g10">Inbox</string>
    <string name="g11">E Tutor App</string>
    <string name="g12">No Reviews Found</string>
    <string name="g13">Public Profile</string>
    <string name="g14">Profile: </string>
    <string name="g15">Post Review</string>
    <string name="g16">Student\'s Post</string>
    <string name="g17">Teacher\'s Post</string>
    <string name="h1">Post Creation</string>
    <string name="h2">My Profile</string>
    <string name="h3">Post Management</string>
    <string name="h4">Cancel</string>
    <string name="h5">Remember Me</string>
    <string name="h6">Login</string>
    <string name="h7">Teacher Registration</string>
    <string name="h8">Student Registration</string>
    <string name="h9">Email</string>
    <string name="h10">Phone Number</string>
    <string name="h11">No Category Selected!</string>
    <string name="h12">No Subject Selected!</string>
    <string name="h13">My Posts</string>
    <string name="h14">Logout</string>
    <string name="h15">Total Posts: </string>
    <string name="h16">Details</string>
    <string name="h17">Post Management</string>
    <string name="h18">Google Map</string>
    <string name="h19">View Post</string>
    <string name="h20">Basic Info</string>
    <string name="h21">Public Profile</string>
    <string name="i1">Name</string>
    <string name="i2">Email</string>
    <string name="i3">Phone No</string>
    <string name="i4">Address</string>
    <string name="i5">Job Status</string>
    <string name="i6">upload NID/Student-ID Card Photo</string>
</resources>