<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/et3"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arbutus_slab"
        android:padding="8dp"
        android:text="@string/d12"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:autofillHints="@string/a1"
        android:background="@drawable/e6"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/arvo"
        android:gravity="center|start"
        android:hint="@string/a7"
        android:inputType="textMultiLine|textPersonName"
        android:padding="3dp"
        android:textColor="#000000"
        android:textColorHint="#333333"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/e5"
        android:fontFamily="@font/coda"
        android:minHeight="15dp"
        android:text="@string/d11"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/et4"
        android:fontFamily="@font/coda"
        android:minHeight="15dp"
        android:text="@string/d10"
        android:textColor="#000000"
        android:textSize="18sp" />
</LinearLayout>