<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/et1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView44"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arbutus_slab"
        android:padding="8dp"
        android:textColor="#000000"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/e4"
        android:fontFamily="@font/coda"
        android:text="@string/h5"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/e5"
        android:fontFamily="@font/coda"
        android:minHeight="15dp"
        android:text="@string/h6"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button50"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/et4"
        android:fontFamily="@font/coda"
        android:minHeight="15dp"
        android:text="@string/h4"
        android:textColor="#000000"
        android:textSize="18sp" />

</LinearLayout>