<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainEntrypage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/e2"
        android:fontFamily="@font/arbutus_slab"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:contentDescription="@string/a1"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="4dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/coda"
        android:gravity="center"
        android:text="@string/a2"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/e5"
        android:drawableStart="@drawable/ic_user_final"
        android:fontFamily="@font/cairo"
        android:onClick="onLoginClicked"
        android:paddingStart="12dp"
        android:paddingTop="1dp"
        android:paddingEnd="2dp"
        android:paddingBottom="3dp"
        android:text="@string/a3"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="@color/colorPrimary"
        app:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.14" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/e1"
        android:drawableStart="@drawable/ic_student"
        android:fontFamily="@font/cairo"
        android:onClick="onTeacherRegisterClicked"
        android:paddingStart="8dp"
        android:paddingEnd="2dp"
        android:text="@string/a5"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="22sp"
        app:backgroundTint="@color/colorPrimary"
        app:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.362" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"

        android:background="@drawable/e1"
        android:drawableStart="@drawable/ic_tutor"
        android:fontFamily="@font/cairo"
        android:onClick="onStudentRegisterClicked"
        android:paddingStart="12dp"
        android:paddingTop="1dp"
        android:paddingEnd="2dp"
        android:paddingBottom="3dp"
        android:text="@string/a6"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="22sp"
        app:backgroundTint="@color/colorPrimary"
        app:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.467" />

</androidx.constraintlayout.widget.ConstraintLayout>